Make the <marquee> element spec-compliant by adding overflow: hidden https://bugs.webkit.org/show_bug.cgi?id=283811
Reviewed by Tim Nguyen.

Make the <marquee> element spec-compliant by adding  missing overflow: hidden property.

<marquee> element spec: https://html.spec.whatwg.org/#the-marquee-element-2

* Source/WebCore/css/html.css:
(marquee):
* Source/WebCore/style/StyleAdjuster.cpp:
(WebCore::Style::Adjuster::adjust const):

Canonical link: https://commits.webkit.org/293513@main

--- a/Source/WebCore/css/html.css
+++ b/Source/WebCore/css/html.css
@@ -54,6 +54,7 @@ address, article, aside, div, footer, header, hgroup, main, nav, search, section
 marquee {
     display: inline-block;
     text-align: initial;
+    overflow: hidden !important;
 }
 
 blockquote {
